<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.general.GeneralFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ambient_sound_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioGroup
                android:id="@+id/ambientSoundMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/normal" />

                <RadioButton
                    android:id="@+id/transparency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transparency" />

                <RadioButton
                    android:id="@+id/noiseCanceling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noise_canceling" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noise_canceling_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioGroup
                android:id="@+id/noiseCancelingMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/transport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transport" />

                <RadioButton
                    android:id="@+id/indoor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/indoor" />

                <RadioButton
                    android:id="@+id/outdoor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/outdoor" />
            </RadioGroup>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
